--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Weather App</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="app-container">
+        <h1>Weather App</h1>
+        <div id="weather-info">
+            <p id="location">Fetching your location...</p>
+            <p id="temperature"></p>
+            <p id="description"></p>
+        </div>
+        <button id="refresh-btn">Refresh Weather</button>
+    </div>
+    
+    <script src="app.js"></script>
+</body>
+</html>
