--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather App</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta name ="viewport" content ="width=device-width, initial-scale=1.0">
+    <title> Weath App</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="app-container">
-        <h1>Weather App</h1>
-        <div id="weather-info">
-            <p id="location">Fetching your location...</p>
-            <p id="temperature"></p>
-            <p id="description"></p>
-        </div>
-        <button id="refresh-btn">Refresh Weather</button>
+
+<div class="card">
+    <div class="search">
+        <input type="text" placeholder="Enter city name" 
+        spellcheck = "false">
+        <button><img src="images/search.png"></button>
     </div>
-    
-    <script src="app.js"></script>
+    <div class="weather">
+        <img src="images/rain.png" class ="weather-icon">
+        <h1 class="temp">22°F</h1>
+        <h2 class="city">California</h2>
+    </div>
+</div>
+
 </body>
 </html>
