--- a/index.html
+++ b/index.html
@@ -15,8 +15,17 @@
     </div>
     <div class="weather">
         <img src="images/rain.png" class ="weather-icon">
-        <h1 class="temp">22°F</h1>
+        <h1 class="temp">80°F</h1>
         <h2 class="city">California</h2>
+        <div class="details">
+            <div class="col">
+                <img src="images/humidity.png">
+                <div>
+                    <p class="humidity">50%</p>
+                    <p>Humidity</p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
