--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
                     <p>Humidity</p>
                 </div>
             </div>
+            <div class="col">
+                <img src="images/wind.png">
+                <div>
+                    <p class="wind">15 km/h</p>
+                    <p>Wind Speed</p>
+                </div>
+            </div>
         </div>
     </div>
 </div>
