--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <div class="card">
     <div class="search">
         <input type="text" placeholder="Enter city name" spellcheck="false">
-        <button><img src="images/search.png"></button>
+        <button><img src="images/search.png"></button> <!-- Search button -->
         <button id="location-btn"><img src="images/location.png"></button> <!-- Location button -->
-    </div>
+    </div>    
     <div class="weather">
         <img src="images/rain.png" class ="weather-icon">
         <h1 class="temp">80°F</h1>
@@ -34,6 +34,17 @@
             </div>
         </div>
     </div>
+    <div class="unit-toggle"> <!-- toggle from C to F-->
+        <label class="switch">
+            <input type = "checkbox" id ="unit-switch">
+            <span class = "slider round"></span>
+        </label>
+        <p id= "unit-label">°C</p>
+    </div>
+    <div class="forecast">
+        <!-- Forecast data will be populated here by JavaScript -->
+    </div>
+</div>
 </div>
 
 <!-- Link the external JavaScript file -->
