--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta name ="viewport" content ="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 </head>
 <body>
 
@@ -14,7 +16,7 @@
         <button id="location-btn"><img src="images/location.png"></button> <!-- Location button -->
     </div>    
     <div class="weather">
-        <img src="images/rain.png" class ="weather-icon">
+        <img src="images/rain.png" class="weather-icon">
         <h1 class="temp">80°F</h1>
         <h2 class="city">California</h2>
         <div class="details">
@@ -34,20 +36,27 @@
             </div>
         </div>
     </div>
-    <div class="unit-toggle"> <!-- toggle from C to F-->
+    <div class="unit-toggle">
         <label class="switch">
-            <input type = "checkbox" id ="unit-switch">
-            <span class = "slider round"></span>
+            <input type="checkbox" id="unit-switch">
+            <span class="slider round"></span>
         </label>
-        <p id= "unit-label">°C</p>
+        <p id="unit-label">°C</p>
     </div>
     <div class="forecast">
         <!-- Forecast data will be populated here by JavaScript -->
     </div>
-</div>
+
+    <div class="card">
+        <!-- Existing weather and forecast display elements -->
+        
+        <!-- Toggle button and map container -->
+        <button id="toggle-map">Show Weather Map</button>
+        <div id="map"></div>
+    </div>
+    
 </div>
 
-<!-- Link the external JavaScript file -->
 <script src="weather.js"></script>
 
 </body>
